Make website squeleton

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,55 @@
 		<title>Portfolio | Ambinintsoa</title>
 	</head>
 	<body>
-		<h1>This is my portfolio</h1>
+		<nav>
+			<ul>
+				<li>
+					<a href="#">Home</a>
+				</li>
+				<li>
+					<a href="#">About</a>
+				</li>
+				<li>
+					<a href="#">Work</a>
+				</li>
+				<li>
+					<a href="#">Chat</a>
+				</li>
+			</ul>
+		</nav>
+		<header>
+			<h1>
+				<span>Hello, I'm Ambinintsoa</span>
+				<span>Frontend Developer proeficient on Angular</span>
+			</h1>
+			<p>
+				Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque
+				expedita mollitia aut alias velit assumenda recusandae dolor numquam
+				illo consequuntur minima maxime, laboriosam distinctio reprehenderit
+				doloribus deleniti sequi in temporibus.
+			</p>
+		</header>
+
+		<main>
+			<section>
+				<h2>About</h2>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi
+					nemo non, accusamus assumenda consequatur quia voluptatibus illum
+					doloremque corrupti quos sed. Ut sapiente laudantium molestiae harum
+					nam eligendi sequi voluptatem?
+				</p>
+				<div>SKILLSET LIST</div>
+				<div>Experience</div>
+			</section>
+
+			<section>
+				<h2>Work</h2>
+				<div>Project 1</div>
+				<div>Project 2</div>
+			</section>
+		</main>
+
+		<footer></footer>
 	</body>
 </html>
