--- a/src/index.html
+++ b/src/index.html
@@ -46,8 +46,32 @@
 					doloremque corrupti quos sed. Ut sapiente laudantium molestiae harum
 					nam eligendi sequi voluptatem?
 				</p>
-				<div>SKILLSET LIST</div>
-				<div>Experience</div>
+				<div>
+					<h3>SKILLSET LIST</h3>
+					<ul>
+						<li>techno 1</li>
+						<li>techno 1</li>
+						<li>techno 1</li>
+						<li>techno 1</li>
+					</ul>
+				</div>
+				<div>
+					<h3>Experiences</h3>
+					<div>
+						<div>Date</div>
+						<div>
+							<h4>Role</h4>
+							<p>Job description</p>
+						</div>
+					</div>
+					<div>
+						<div>Date</div>
+						<div>
+							<h4>Role</h4>
+							<p>Job description</p>
+						</div>
+					</div>
+				</div>
 			</section>
 
 			<section>
@@ -57,6 +81,15 @@
 			</section>
 		</main>
 
-		<footer></footer>
+		<footer>
+			<span>© Copyright 2024</span>
+			<div>
+				<ul>
+					<li><a href="#">Social</a></li>
+					<li><a href="#">Social</a></li>
+					<li><a href="#">Social</a></li>
+				</ul>
+			</div>
+		</footer>
 	</body>
 </html>
